--- a/src/routes/styles/foundation/_variables.scss
+++ b/src/routes/styles/foundation/_variables.scss
@@ -4,7 +4,7 @@
 	--dark-secondary: oklch(0.35 0.005 264);
 	--light-primary: oklch(0.95 0.005 264);
 	--light-secondary: oklch(0.9 0.005 264);
-	--blue-primary: oklch(0.4 0.2 264);
+	--blue-primary: oklch(0.45 0.2 264);
 
 	/* c: color, bg:background color */
 	--c-primary: var(--dark-primary);
@@ -17,6 +17,14 @@
 	--font-weight-semibold: 600;
 	--font-weight-normal: 400;
 
+	/* ff: font family */
+	--ff-sans:
+		'Space Grotesk', 'Helvetica Neue', 'Arial', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans',
+		'Noto Sans JP', 'BIZ UDPGothic', 'BIZ UDGothic', sans-serif;
+	--ff-mono:
+		'Menlo', 'Consolas', 'Roboto Mono', 'Ubuntu Monospace', 'Noto Mono', 'Oxygen Mono',
+		'Liberation Mono', 'BIZ UDGothic', monospace;
+		
 	/* m: margin */
 	--m-vertical: 1rem;
 	--m-horizontal: 1rem;
